--- a/webui/public/index.html
+++ b/webui/public/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><title></title></head><body>haha</body></html>
+<!DOCTYPE html><html><head><meta charset="utf-8"><link rel="stylesheet" href="/css/style.css" media="screen" title="no title" charset="utf-8"><title></title></head><body><div class="echo">Hello</div></body></html>
