--- a/webui/public/index.html
+++ b/webui/public/index.html
@@ -1,1 +1,26 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><link rel="stylesheet" href="/css/style.css" media="screen" title="no title" charset="utf-8"><title></title></head><body><div class="echo">Hello</div></body></html>
+<!DOCTYPE html>
+<html>
+   <head>
+      <meta charset="utf-8">
+      <title>HTML</title>
+      <link rel="stylesheet" href="css/style.css">
+   </head>
+   <body>
+      <div id="wrapper">
+         <ui>
+            <li class="draggable"><a href="">1</a></li>
+            <li class="draggable"><a href="">2</a></li>
+            <li class="draggable"><a href="">3</a></li>
+            <li class="draggable"><a href="">4</a></li>
+            <li class="draggable"><a href="">5</a></li>
+         </ui>
+      </div>
+      <script src="bower_components/jquery/dist/jquery.min.js" charset="utf-8"></script>
+      <script src="bower_components/jquery-ui/jquery-ui.min.js" charset="utf-8"></script>
+      <script type="text/javascript">
+         $(function(){
+            $(".draggable").draggable();
+         })
+      </script>
+   </body>
+</html>
