--- a/webui/src/html/main.html
+++ b/webui/src/html/main.html
@@ -16,11 +16,11 @@
    <div id="wrapper">
       <div class="sidebar">
          <ul>
-            <li data-images="php-image"><a href="#"><img src="img/php.png" alt="">PHP</a></li>
-            <li data-images="MYSQL-image"><a href="#"><img src="img/mysql.png" alt="">MYSQL</a></li>
-            <li data-images="PHPMYADMIN-image"><a href="#"><img src="img/myad.png" alt="">PHPMYADMIN</a></li>
-            <li data-images="LAMPP-image"><a href="#"><img src="img/lamp.png" alt="">LAMPP</a></li>
-            <li data-images="CPANEL-image"><a href="#"><img src="img/cp.png" alt="">CPANEL</a></li>
+            <li data-images="php"><a href="#"><img src="img/php.png" alt="">PHP</a></li>
+            <li data-images="mysql"><a href="#"><img src="img/mysql.png" alt="">MYSQL</a></li>
+            <li data-images="phpmyadmin/phpmyadmin"><a href="#"><img src="img/myad.png" alt="">PHPMYADMIN</a></li>
+            <li data-images="l3iggs/lamp"><a href="#"><img src="img/lamp.png" alt="">LAMPP</a></li>
+            <li data-images="horza/cpanel"><a href="#"><img src="img/cp.png" alt="">CPANEL</a></li>
          </ul>
 
          <a href="#"><div class="submit hidden"><i class="fa fa-upload"></i>submit</div></a>
