--- a/webui/src/html/main.html
+++ b/webui/src/html/main.html
@@ -15,23 +15,46 @@
 <body>
    <div id="wrapper">
       <div class="sidebar">
-         <ul>
+         <ul  class="services">
             <li data-images="php"><a href="#"><img src="img/php.png" alt="">PHP</a></li>
             <li data-images="mysql"><a href="#"><img src="img/mysql.png" alt="">MYSQL</a></li>
             <li data-images="phpmyadmin/phpmyadmin"><a href="#"><img src="img/myad.png" alt="">PHPMYADMIN</a></li>
             <li data-images="l3iggs/lamp"><a href="#"><img src="img/lamp.png" alt="">LAMPP</a></li>
             <li data-images="horza/cpanel"><a href="#"><img src="img/cp.png" alt="">CPANEL</a></li>
+            <li data-images="wordpress"><a href="#"><img src="img/wp.png" alt="">WORDPRESS</a></li>
+            <li data-images="scivm/scientific-python-2.7"><a href="#"><img src="img/python.png" alt="">PYTHON 2.7</a></li>
+            <li data-images="python"><a href="#"><img src="img/python.png" alt="">PYTHON 3.5</a></li>
+         </ul>
+         <div class="clear-fix"></div>
+         <ul>
+            <div class="form-style-2">
+               <div class="form-style-2-heading"></div>
+               <form action="" method="post">
+                  <label for="field1"><span>Server Name <span class="required">*</span></span><input type="text" class="input-field" name="field1" value="" /></label>
+                  <label for="field2"><span>Your Email <span class="required">*</span></span><input type="text" class="input-field" name="field2" value="" /></label>
+                  <label><span>IP Address </span><input type="text" class="input-field" name="field3" value="" /></label>
+                  <label for="field4"><span>Server</span><select name="field4" class="select-field">
+                     <option value="DigitalOcean">Digital Ocean</option>
+                     <option value="Azure">Azure</option>
+                     <option value="OVH">OVH</option>
+                  </select></label>
+                  <label for="field5"><span>Message <span class="required">*</span></span><textarea name="field5" class="textarea-field"></textarea></label>
+
+                  <a href="#"><div class="submit hidden"><i class="fa fa-upload"></i>submit</div></a>
+               </form>
+            </div>
          </ul>
 
-         <a href="#"><div class="submit hidden"><i class="fa fa-upload"></i>submit</div></a>
+        </div>
+
       </div>
-      <div class="menu">
-        <ul>
-         <li >testeeeee</li>
-      </ul>
-    </div>
+
       <div class="selection"></div>
       <div class="recycle"></div>
+      <div id="animated-gif-container"></div>
+      <footer>
+         <p>copyright 2016 . <a href="#">noviceCODE</a></p>
+      </footer>
    </div>
    <!-- <div class="app-draggable position-1"></div>
    <div class="app-draggable position-2"></div>
