--- a/webui/src/html/login.html
+++ b/webui/src/html/login.html
@@ -8,10 +8,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Login Form</title>
   <link rel="stylesheet" href="css/login.css">
+  <script src="bower_components/jquery/dist/jquery.min.js" charset="utf-8"></script>
+  <script src="js/wallpaper.js" charset="utf-8"></script>
   <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 <body>
-  <section class="container">
+  <section id="top-image" class="container">
     <div class="login">
       <h1>Login to My Frame</h1>
       <form method="post" action="users/login">
@@ -26,9 +28,8 @@
         <p class="sing-in"><input type="submit" name="commit" value="Login"></p>
       </form>
     </div>
-
     <div class="login-help">
-      <p>Forgot your password? <a href="index.html">Click here to reset it</a>.</p>
+      <p>Forgot your password? <a href="register.html">Register Now</a>.</p>
     </div>
   </section>
 </body>
